Fixed page alignment with menu

--- a/DeforaOS/Apps/Web/DaPortal/themes/DeforaOS.css
+++ b/DeforaOS/Apps/Web/DaPortal/themes/DeforaOS.css
@@ -103,7 +103,6 @@ table.bordered th {
 }
 
 .main {
-	min-height:			400px;
 	padding-left:			200px;
 	padding-right:			10px;
 }
